--- a/start/static/start/css/style.css
+++ b/start/static/start/css/style.css
@@ -103,3 +103,22 @@ p {
     font-size:24px;
   }
 }
+
+/*FORM SIGNIN & REGISTRATION*/
+.form-signin {
+  max-width: 330px;
+  padding: 15px;
+}
+
+.inp {
+  display: flex;
+}
+
+.form-registration {
+  max-width: 400px;
+  padding: 15px;
+}
+
+.form-registration .form-floating:focus-within {
+  z-index: 2;
+}
