--- a/start/templates/HR_CRM_System/start.html
+++ b/start/templates/HR_CRM_System/start.html
@@ -4,15 +4,19 @@
   <meta charset="UTF-8">
   <title>Sakura</title>
   <link rel="stylesheet" href="static/start/css/style.css">
-
+    <link href="https://unpkg.com/tailwindcss@2.2.4/dist/tailwind.min.css" rel="stylesheet">
 </head>
+
 <body>
 
 <div class="header">
 
 <!--Content before waves-->
-<div class="inner-header flex">
-<svg version="1.1" class="logo" baseProfile="tiny" id="Layer_1" xmlns="http://www.w3.org/2000/svg"
+  <!--<div class="button-group">-->
+
+    <div class="hero-text col-span-1 mb-16">
+<div class="inner-header flex space-x-4 -mt-16">
+<svg version="1.1" class="w-12 h-12" baseProfile="tiny" id="Layer_1" xmlns="http://www.w3.org/2000/svg"
 xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 500 500" xml:space="preserve">
 <path fill="#FFFFFF" stroke="#000000" stroke-width="10" stroke-miterlimit="10" d="M57,283" />
 <g><path fill="#fff"
@@ -21,153 +25,16 @@ C499.8,112.4,388.1,0.8,250.4,0.8z M383.8,326.3c-62,0-101.4-14.1-117.6-46.3c-17.1
 c-22.4,3-38.4,9.2-47.8,18.3c-11.2,10.9-13.6,26.7-16.3,45c-3.1,20.8-6.6,44.4-25.3,62.4c-19.8,19.1-51.6,26.9-100.2,24.6l1.8-39.7		c35.9,1.6,59.7-2.9,70.8-13.6c8.9-8.6,11.1-22.9,13.5-39.6c6.3-42,14.8-99.4,141.4-99.4h41L333,166c-12.6,16-45.4,68.2-31.2,96.2	c9.2,18.3,41.5,25.6,91.2,24.2l1.1,39.8C390.5,326.2,387.1,326.3,383.8,326.3z" />
 </g>
 </svg>
-<!--  <svg version="1.1" id="Слой_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-	 viewBox="0 0 1500 1500" style="enable-background:new 0 0 1000 1000;" xml:space="preserve">
-<image style="overflow:visible;" width="983" height="983" xlink:href="data:image/jpeg;base64,/9j/4AAQSkZJRgABAgEASABIAAD/7AARRHVja3kAAQAEAAAAHgAA/+4AIUFkb2JlAGTAAAAAAQMA
-EAMCAwYAABLrAAAY1AAAH07/2wCEABALCwsMCxAMDBAXDw0PFxsUEBAUGx8XFxcXFx8eFxoaGhoX
-Hh4jJSclIx4vLzMzLy9AQEBAQEBAQEBAQEBAQEABEQ8PERMRFRISFRQRFBEUGhQWFhQaJhoaHBoa
-JjAjHh4eHiMwKy4nJycuKzU1MDA1NUBAP0BAQEBAQEBAQEBAQP/CABEIA9gD1wMBIgACEQEDEQH/
-xADGAAEBAAMBAQEAAAAAAAAAAAAAAQIEBQMGBwEBAQEBAQEAAAAAAAAAAAAAAAEEAwIFEAABAwIG
-AgECBgIDAAAAAAABEQIDAAQQIDBAUGASBSExMnCQIhMjM7AkgEE0EQABAQUGAwYDBgUFAAAAAAAB
-AgBQETEDYCFBUXESYbEiQIGRoTJSwdETMEJicrIEsOGCIzPxkqLCYxIAAQIEBAUDAwUBAAAAAAAA
-AQARQFAhAjFRcYEwQWGxEpEicpCh0SCw8DJiA//aAAwDAQACEQMRAAAA/QAAAAAAAAAAAAAAAAAA
-AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAACFSgAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-AAAAAAAAAAAAAAAAAAAAAABPNfVqeL30MOdjPW95a1e/THE9ZZeY9/XUPPRz5fq59B4+t50IAAAA
-AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAIVPNfXHQ8J13/DXrpYPQAoACKACyj18i
-dD05mzeO0lcwAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAACeS+00dZ06nhz7Omz5+R7
-oWgKQAUABFlABQAAVPXc52bx0GGd4AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAE1V2tb
-Swnf08rHYolAUXHJAKEFAAQUAAUAAFEAy3dCvPSefpc4AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-AAAAAAhfHX1J29PMdwIpYsQsVZUlDKKgFSgIKAALKAALKgAAGW9z8njoscrwAAAAAAAAAAAAAAAA
-AAAAAAAAAAAAAAAAAAAAGBedPOaYp0iiKIoiiKIsKlASgqVAKAAUAAAWVAAAAPTe5vu57iW8QAAA
-AAAAAAAAAAAAAAAAAAAAAAAAAAAAAABDHnXzmmKdIoikiwKIUiiLACglChBQAUlAAAChAAAAANvY
-5u9ePoHMAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABo+/PnYHYAAAAAAUgAJQsoBFlAFlAAAAQCpQ
-AAABngOldTbucHkAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABLrLq+dTVKKAAAACAARSyiJSyiAVKFg
-oAAAAgCwUAAAADe0c3noJbnAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAnO3edOwOoAAAABYFEKQAAA
-AFABUoAAAAACLBUFAAAIbW1zOheOYcwAAAAAAAAAAAAAAAAAAAAAAAAAAAABDT1spNUUsURRKAAA
-AAACUQAACgBYCygAAAAAAACwlQWA2NfJOkLmAAAAAAAAAAAAAAAAAAAAAAAAAAAAAePtpvWsJpAA
-AAAAAAAAAiwAAsCpSggKlACUJQlAAAAAAATqC5QAAAAAAAAAAAAAAAAAAAAAAAAAAAAJzt/nTqlO
-0URRFEURRFgWApAAAJYAAAUAAAFgAAAAAAVBUFgVKdQXIAAAAAAAAAAAAAAAAAAAAAAAAAAAABr6
-exrzQD2AAAAAAABFEWACUQAktRWSEoAAAAAACUAAAAAZYeqdEXKAAAAAAAAAAAAAAAAAAAAAAAAA
-AAAIaHnZNQAAKAAAAAABAAJYCAKBUoCVAAsFQLAAAAAABUD28dh53hcwAAAAAAAAAAAAAAAAAAAA
-AAAAAAADz9PFdFU0pRCkAACgAAAJYAAJYJSyWALUSZQqpQEBSCgAIKgoAABC7WpvPGyLmAAAAAAA
-AAAAAAAAAAAAAAAAAAAAAa+xqvWslmiUAIsAAAUAAQAAAiwEVLCJVAtxpUqVAAAAAIUAAAAhehz+
-m5+gucAAAAAAAAAAAAAAAAAAAAAAAAAAABqbeo966WdwAIAAAFEKlIAAAgASxUsWSwqFqWKizJBR
-IllLCgAgKAAsFgOtyuu4BeIAAAAAAAAAAAAAAAAAAAAAAAAAAADU29V71bE70AEWAAKihAAAIWAA
-CpYJYslkQltuNWpZKlsqCoLAEjKFVABUFQWB69TndG5wcgAAAAAAAAAAAAAAAAAAAAAAAAAAAGvs
-eL1pCaJYKCABRAAAACAABRABjlFksXEkoW24pMrjUyY2qSLCiCoKiMoUsFQWBub2pt3IDwAAAAAA
-AAAAAAAAAAAAAAAAAAAAAAxyHLZ4TUCggCUsAAQAAApKIABACzGxZLFQlEMrjS3FZmxoQSyLkgqE
-yQVBbCWIvV9/P0uEEAAAAAAAAAAAAAAAAAAAAAAAAAAAAA1Nboc6d6ldCCoKgASwELFUgsAAQqFs
-AgSxcZYslxerJDK4UzY1MkoQXELIXJEluNqpYqLKnqdelwAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-NDf83rnCaUoAIKCASxQBCpQgBRCwBFAxli4zLF6glIFDJiszkBASyrIZMcrLcaW4kuzq7rx0hcQA
-AAAAAAAAAAAAAAAAAAAAAAAAAAAAAGtpdbUnXUsO1gWAAIoCWAKIUgASiCgIDGxZjlg9SZYyoi5M
-aZsMpKlqKCCsRlAZYjNjbHT5XYctoXGAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABqanW1Z10rDvUF
-lgAIApAAQUigEAKgJYuOOWKyZYy4yx6WRcrjUyQmSBAAWC5YUyio7nD+guei5QAAAAAAAAAAAAAA
-AAAAAAAAAAAAAAAAAANfQ6/hOvPljvULUFgIEqLYAhUAKgCFgpBMcosxyxnrHHLF6IVYTK45JUFQ
-CFsFQWwmf0Pz/wBBcoXMAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAB5c7rec6ctlg02AQVC2QELU
-AhUFgohYgItiDDPCepjlisg9ELlcMkyQlCAEqgluNPT6H5z6O5AuYAAAAAAAAAAAAAAAAAAAAAAA
-AAAAAAAAAAADDm9XF75E99eaqkWpSWRbAElqCoqxAFICARWOWMsxyi4Sx7gLcRlcSZpUIKQoFlL9
-L8x9NclFygAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAATn9GPXEbujNiyPWUIiKsFILAqAgJVQg
-RUsJEWY5YvUg9LjS3GpcsKZREyQVBQPpfmfpLl9RcYAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-AADU2z1wsetypriHQQsFioEKlIoRCwVAQWSxZhniuMseiFyQlsGUEqUAqVH0Xzn0NzbIuIAAAAAA
-AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAB4+xeD597kTZ4UnUmMuUQsCoqoACFsSrAY2SyWPWMsWBV
-gqUWEyQUIsF7/wA/3rn3RcAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAADHIcbV+i5XnXpRJ
-psKIKgqCoLAIWwEFxIsxyiwi1C1KiwUDLGpUo7nD7Vz9EX54AAAAAAAAAAAAAAAAAAAAAAAAAAAA
-AAAAAAAAAAACUc7l/S6U08ZlhNdiLUFQVBSFQohYgliyWLJYoKBUqLBUFsJexxuvePWF+aAAAAAA
-AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABrcT6Tynf5x7eE3CLUFBYAhUKIATHKLJY9RYVBQVK
-gCwXq8rp3j2hfmAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAYcXux0+WdHnefopY9VB
-UFQACLYCBJYqUsAsFAsFCOlzeg594evlAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-TndI9fKzv8OfRwE6ywVBYBBYKgJYJYoAAFQUF3tDdc/oh6+SAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-AAAAAAAAAAAAAAAAA19gvzPj9Rwpv1CTQCrCELYACCpYACFAAsF29TaePpR6+QAAAAAAAAAAAAAA
-AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAlHE5v1nNmziyptgAAIFEAEsKRagoQBt6nQc/oB6+SAAA
-AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABqcH6nymj5ebulN4j0CiAAEC2AAAojvc
-T6q5MxcAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAE53SPXynn9VxZv55JpAA
-SiBQAABtvPQ60vr5IPAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAGlxfp5O
-/wAg7vHm7yDrFLAAAD2SfTYbN+aFzgAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-AAAAAAMchzOX9PJo+Qn0+g1cdua074Lmvm6HUvHld30twA5AAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-AAAAAAAAAAAAAAAAAAAAAAAAAAAAJRFAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-AAAAH//aAAgBAgABBQD8ohaXKvKrzS0vNr+OZ72fw5P/AAXHPDnhzw/DBegLS5hzw54c8OeHPDjF
-pdiOJNLtBxRG0HFkbMcYmyHPDtyc+nPkag5ROfTQHMJSYp+UH//aAAgBAwABBQD8ocAmhE40IaEb
-RSCkFFjTRiogjkwCabCaEbRokA06NOOAJoQuNCFooMaNZ7FohOKa0upsIoADZOYHUQnEMiWgABtH
-s8hwoC1HGG7iRi8LGzxG5kanBxM3ZC05qHgGhSAg3b2qOAiG+kah37Qg3rgo3zArudiHPRhG7530
-3w+Bvn/bvW/XfyfZvWfdv5vt3sf3b+bfR/dv5j+ret+7fyn9e+HyNcaaZHFXb6Mq3YDBKTSPwN+x
-3idgMqaEvwzgI37AUKGKZEyXHwzgY5NgKGVM1yfjgo5E1xQoaV19eDjk8aBB1hQ0rr68Ix5bTSCN
-QUKGjd8Mx5aWODhqjIRlu/pwzXFpjkDxqDRux+jhwSDFKHYJpjQu/wCviYpgdQaF1/VxUM6UME2F
-z/VxcM5ZTSCNAaFx/VxkUroyx7XjXn/q41j3MMUrZBrTf18cCWmG4D9aX+vkILnVmKR8jDcFlNe1
-w0rx6N5Jj3MMVy1+i5wa2R5e/lIrl7KjmZJmJAFxP+4eXjupG0y7jdQew0SBUlzG2pZ3yflBf//a
-AAgBAQABBQD/AA6ygU6eFtOvYxTr2Q0biY1+5Ia/cfQmlFNu5RTb1tMmjf20kCnXMLadfNp13M6n
-Pe7TjuJWVHcxv7Q6RjA++jFPvJXU573bGO4fHUczJB2IkCnzxMbJeSvokuO0BIMN1X166+eFlP8A
-YRinX8pp1xM6i4naJmhndHTXteOsSXMMdSewcafPNJwEcjozHI2RvVCQ0S30baluZpNAbxj3MdFK
-2QdRJAE18xtSSySHSG8a5zHRSiRvT5rmOKpbiSU5E0BvWPcx0UjZG9MJAE94TRUnWG9jkdG5j2vb
-0p72xtnuXynImKaQ3sMpjcCHDpEsrYmzSvldqpwdvN4Ho8kjY2yyuldyVtN5DopIaJ5jK/STiQSD
-DKJG9Eu5/I8rFIY3ghw6Fczfts5e2lQ9BJAE0hlk5iCX9xnQLyTxZs04aKQxvBBHPzyfuSc1ay8/
-cv8ACLm2ktMbxIznbx6v3w31pIj+cJQPcXv5yMpJzl0/xi4Ab0fXnLx6v71K7zk50fXm5XeMe6PC
-M+X83eOSPnovmXm7xyyc9bhZ+bnd5S7s8HaD+fmiUBKnnrIfyc1MUi3p4KxHzzV0Ui35oHBd7Yj+
-Pmrw/o35yLvLQJBzV4eAOUUu6twkPNXn3cAdguu0I3mrz7t+dBdvGPKTm7z7t+cDqnFcV0rULPzd
-4OWXRsQs/N3Y/RpnaHE4rS0DprqevHzzdyFh35wOZUpaWlyLRpaOC4rRz+vH8XNvb5M35wOByLQx
-BpchpaWlpaXBc9mEt+cmb4yb86C4rS0tGlo0Mq0uU4Qt8YucvGI7gTgcVpaBpcBgcDguC0tLmNNH
-k7nZ2fuR5FzHbGjgaNLS0tA0DS0MTiuUHKatm+Vxz1zH4Sb80aNGjggx+aXBaWjiaWlyrS4+vC3P
-PTRiRhBB0ztDgaOK0tLitA4LS4pgtLQxWia9W1X8/dQeQwXYLqnA0cFTEGgaXBKXBM60DS4+sb/F
-0C5tuCOByg0DimK0tA0tLitLRPz69qWvQbm2XfnA4HFci0DQNGlzLQOIq2b42/Qrm18t+aOBo4rS
-0DkXRBxaEb0O4thJRUHBcwyrrmjgfqci0DiumtQjym6LcW7ZQ5rmHWXWOBo0cq0Dgunbf+jo08DZ
-myMdG6l3RxNHFcAaWl0gcICk/R5oWStlifE7KuC6q5/+qNGjRxXAHUiKS9IkjZI2eB8LsF110zRo
-5wdNpR3SXNa9tzbOiK4rgaXKtLRpaWjonE0aOVcxzgqOkkAi6tCzBaWlwOK4roLnNGjRzg0DRpcV
-xXCIrH0u6ssVpcDS4rgtLS4roHE4HIuIwWhmWrYrb9MurMSU4EGlwNLS51yrlNHA0aOVcVxXBclm
-Vtem3Vo2cPY6Ny0tLnWlyLS6BwNHOtLmGC168rZ9OuLaO4bNBJC/5r5xXAmlyLS5VyGjgaOiND1h
-Wx6fNCyZlzbSW7sDS0uZci5zidEUtLkGHqStl1B7GyNvLN8BWjicwNLS6JwOkM/pytp1EgEXvrzH
-mXXOB2PpD/rdTvfXeVH4JyLS6po7AYejP8XVL2wbOHscx2zOgDo+iPx1W7s47ls0MkD1zLgtLonY
-+iP6+rXFvHcMurSS2fkWlyrS5zsPRn+bq8kbJWXtg+2J2Jo6/oz/ALXWCA4X/rDHmXVOB0Vx9KUv
-OtX3rA+iC05FxO39OUvet3vr47kSxPifvfUH/f65dWkV0y5tZbZ+89V8X/XZoY52Xvr5LV2K7j1f
-/v685rXNv/Vui3fqwt/2C/8AVNlpzXMduPSR+V52G9sIrptxby279v6SDwt+xT28Vwy99ZNb7aCF
-080cbY4+yXnqI5amhlhfs/S2nizs09vDcMvPUTQ7L19m67na0Nb2i79Zb3NXVjcWp1re3kuZbW2j
-tYe1FocLr00UlXFrPbu07a2luZLOzitI+2uY17bn0sMlXHr7q30bL1U1xUFvFbx9xn9daT1N6F1S
-ervY6dBMyvF1Mt55Kg9NdSVbertbfvHi3/Bq/wD/2gAIAQICBj8A/fBP/9oACAEDAgY/APpD0DrJ
-VKwWAWCwVCqzOgVSywfXg1TiXUDqtFVyqAcZxjK6Be6qYBoLqmMoe70TCF6yZgnOMQ4xkrnGKcSP
-yO0WyaQgJhGdZCTtHPnIAI4iPE+J2nwjzpHtHnSOGsgMcJANY4SACOEg2jhIDHvHk9Y9so4nKfXa
-SFjtG6mRNd6xlokbHCLt0kjHBOIm3QyXonERZvJnHonEPbqZO4XXKGt+UocUTGl0KPlKvG7HOE3E
-r8b8ORg7tu8sY1t7JwXBgbv5zltKjmE9pgL9Jc9pVKHmOPf8TL3BYheN1Lu/Gv8Ahd2mPj/02u/P
-FvP+TMmPut7J7S44YsGN1ToJm9pZNd7bvtwTccAjcefaasfdbkVQ1yOP6nJYBMP6j7zhj7x1/Kq9
-uqpcDuqlUPkcrVWgyH0gv//aAAgBAQEGPwD+DrXteod17dIJ8m6QB5teot6j4t6j4lrlFr4HVupM
-NG6Vd1rb2vVHS9uhMdWuO3RupRP2cIxGRaB6TxtRFSgG6QVHwDXQSODdSidewwmnItcb8rR3liSo
-GGAm0E9I4TaJMTx7LEXFttT/AHWe6lCOTdKSrybpAT5tes91zXmOvaoG9OTbkmIszeqJyF7Qpphx
-LdSjpJwRT3hojvFlYkwDQQN5zwa9UBkLnJuSb2iLiJiyUTcGhT6jng0VmPDBz7k3ENETExZCE1e0
-N1GA9ok6tyZtETxFjYm4BimlLFXyaJm7Nw7wwUmVi9yjANCSMB83f+EzDAi8GxO5XcM2iqWAyeOx
-XpPlYgqVINuV3DJ57FTEjYYk3ATaP3RIPSImGjiJiwv00npE+JewUJYhgRI2DgPUq4Pj6apGWtgo
-mQYqwkNHzf6hOwOwTVPR9BQliODAiRsAVYSGj7+mdUv8nE3DvfgImGChjPV/BGCbzqX7sMlc37Ey
-DFRxL9SeIfpzVc/g/QjIRPfbtSszc/g/FK4XP9I4h+BOZ5P9GofgTkOb/Rq/FHjDwuf44AvsnJov
-9RyT8X2o8OdgFnQPsjMgWAUcz8H2kcbAA5kl9oGvwsAgcI+L7TobAAZAB9p0f6U5kB+J0L/QOMfC
-9+IOr/jkCX4k5F/rVlAPw8IF/qVmrkH4pOYL/TxifN+qHG7vfyBkkcn6ledxfoTmYP4pxmNQ/aY4
-g+F7/iPSq8PwH2gn4fF/lOMweLQMxN91FZADx/0sB9RHqExm+1qzVDwH87AmpTH5g+kn3EnzsEV0
-xfil80x+Eedgyun6sRm0DN7QYDIQsJvRcvm0DcRN6oTmoDzsNEXLGObFKhAh6Uvzp52HvuUJFtqh
-AvOn+dPOxEFTwOTbVDQ5vJB/EOdidqhENfekyU8QcjYopUIg4NuF6M8niDnYqBvBmGK6d6MRk8EH
-NI5WMNSkNU/J30jmhPKxpXTuXiM2IIgRMO2j+RPKx24dNQSOerFCxAh2UtORsfBVyh6VZNtWNDgX
-XT/q/UbIbFiIwOIaBvSZKdSeBVzsiULEUmYbcnqpnHLV0ngsjyFkiCIgzDGrREUYpxDoWMlnkLKG
-rQF81Iz0aBuLmqj8Q5WVK6fTV8lMUrEFCYLlrjin/tZa/pqD0q+bFFQQOGRclYZhPxsvsqDQ4hoK
-vSfSrAuOqM0jnZgoqDck4NuT1UjI4jVxLH/meabMkERBmCxq0BFEyjEaOE8UHmLNmr+3EFzUjA6M
-QRAiYPb08Uq5WcK09NUY4HViioNqhh26nxCv0mzu1YgoelQmG21Bd91Qke20v6v0mzxp1BuSfLRt
-w6qRkrLge2UdT+k2fKVCKTcQWNX9uN1OZTintdLU/pNoTV/bjbUmUYHRilQIULiD2nfhTST3m60U
-fTVElj4sUVRA4HA6doVVM6pu/Km60ZRVTEYZjRitHXS9wmNezIpImswZNNNyUgAd1pSuhBFT2/dP
-yYoqpKVDA9kP7pYvXcjTE2n2VUhQwOI0Yro/3Kf/ACHYgk/403rPDLvYJSIACAHC1JUB9Op7hjqG
-/uJinBYvH24pUxEmZwAzLCkjVRxJztWUqAIMwWK/25+mr2n0tCqgpyOB7/tBTpCOZwA4ttReo+pe
-JNrilYCkmYN7FVA/TVkb0t1oJT7hePsQtf8AbpZmZ0DCnSTAY5nW2UVICVe5NxaNGpHgr+Tf4yof
-hv5N1IUNQ0j4NBFNStAWjUhTTxn4MFQ+ov3K+AtxIfwNX//Z" transform="matrix(0.9999 0 0 0.9999 8.0999 8.6823)">
-</image>
-</svg>-->
-<h1>HR CRM System</h1>
+<h1 class=" font-bold text-4xl md:text-5xl max-w-xl text-white-900 leading-tight">HR CRM System</h1>
+  </div>
+        <div class="get-app flex space-x-5 -mt-20 justify-center md:justify-center">
+       <a href="login"><button id="autor" class=" w-48 h-16 bg-blue-500 hover:bg-pink-500 text-white font-bold py-2 px-4 rounded-full">Авторизация</button></a>
+   <a href="registration"> <button id="reg" class=" w-48 h-16 bg-blue-500 hover:bg-pink-500 text-white font-bold py-2 px-4 rounded-full">Регистрация</button></a>
 </div>
+        </div>
+
+
+<!--</div>-->
 
 <!--Waves Container-->
 <div>
