--- a/authorization/templates/authentication/registration.html
+++ b/authorization/templates/authentication/registration.html
@@ -1,10 +1,51 @@
-{% extends 'HR_CRM_System/header.html' %}
-{% load static %}
-{% block content %}
-    <main class="form-registration w-50 m-auto">
+<!DOCTYPE html>
+<html lang="en" >
+<head>
+  <meta charset="UTF-8">
+  <title>Sakura</title>
+  <link rel="stylesheet" href="static/start/css/stylereg.css">
+</head>
 
-    </main>
-{% endblock %}
-{% block title %}
-Регистрация
-{% endblock %}
+<body>
+<div class="wrapper">
+    <div class="title">
+      Регистрация
+    </div>
+    <div class="form">
+       <div class="inputfield">
+          <label>Фамилия</label>
+          <input type="text" class="input">
+       </div>  
+        <div class="inputfield">
+          <label>Имя</label>
+          <input type="text" class="input">
+       </div>
+        <div class="inputfield">
+          <label>Отчество</label>
+          <input type="text" class="input">
+       </div>
+
+        <div class="inputfield">
+          <label>Email</label>
+          <input type="text" class="input">
+       </div> 
+      <div class="inputfield">
+          <label>Номер телефона</label>
+          <input type="text" class="input">
+       </div>
+         <div class="inputfield">
+          <label>Пароль</label>
+          <input type="password" class="input">
+       </div>
+      <div class="inputfield">
+          <label>Подтвердите пароль</label>
+          <input type="password" class="input">
+       </div>
+
+      <div class="inputfield">
+        <input type="submit" value="Зарегистрироваться" class="btn">
+      </div>
+    </div>
+</div>
+</body>
+</html>
