Fixed gradient bug
Co-authored-by: Annawhq <annashkolina01@gmail.com>

--- a/authorization/templates/authentication/login.html
+++ b/authorization/templates/authentication/login.html
@@ -2,14 +2,14 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>Sakura</title>
+  <title>Войти</title>
   <link rel="stylesheet" href="static/start/css/stylereg.css">
 </head>
 
 <body>
 <div class="wrapper">
     <div class="title">
-      Вход
+      Войти
     </div>
     <div class="form">
 
