--- a/authorization/templates/authentication/registration.html
+++ b/authorization/templates/authentication/registration.html
@@ -2,7 +2,7 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>Sakura</title>
+  <title>Регистрация</title>
   <link rel="stylesheet" href="static/start/css/stylereg.css">
 </head>
 
