--- a/start/static/start/css/stylereg.css
+++ b/start/static/start/css/stylereg.css
@@ -7,7 +7,7 @@
   font-family: 'Montserrat', sans-serif;
 }
 body{
-  background: linear-gradient(60deg, rgba(84,58,183,1) 0%, rgba(0,172,193,1) 100%);
+  background: linear-gradient(0.25turn, rgba(84,58,183,1), rgba(0,172,193,1));
 }
 .wrapper{
   max-width: 500px;
