--- a/authorization/templates/authentication/login.html
+++ b/authorization/templates/authentication/login.html
@@ -26,7 +26,9 @@
        </div>
 
       <div class="inputfield">
+          <a href="candidates">
         <input type="submit" value="Войти" class="btn">
+          </a>
       </div>
     </div>
 </div>
