--- a/start/templates/start/header.html
+++ b/start/templates/start/header.html
@@ -60,7 +60,7 @@
         <div class="hidden sm:ml-6 sm:block">
           <div class="flex space-x-4">
             <!-- Current: "bg-gray-900 text-white", Default: "text-gray-300 hover:bg-gray-700 hover:text-white" -->
-            <a href="#" class="bg-gray-900 text-white px-3 py-2 rounded-md text-sm font-medium" aria-current="page">Кандидаты</a>
+            <a href="/candidates" class="bg-gray-900 text-white px-3 py-2 rounded-md text-sm font-medium" aria-current="page">Кандидаты</a>
 
             <a href="#" class="text-gray-300 hover:bg-gray-700 hover:text-white px-3 py-2 rounded-md text-sm font-medium">Вакансии</a>
 
@@ -99,10 +99,10 @@
     </div>
   </div>
 </nav>
+    {% block content %}
+{% endblock %}
 {% else %}
 <nav class="bg-gray-800">
 </nav>
 {% endif %}
-{% block content%}
-{% endblock %}
 </body>
