--- a/start/templates/start/candidates.html
+++ b/start/templates/start/candidates.html
@@ -2,6 +2,19 @@
 {% load static %}
 {% block content %}
     <a class="btn btn-dark" href="/add_condidate" role="button">Добавить кандидата</a>
+
+    <div>
+        {% for candidate in candidates %}
+            <div class="card" style="width: 18rem;">
+                <img src="..." class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">{{ candidate.name }}</h5>
+{#                    <p class="card-text">{{ candidate.email }} . {{ candidate. }}</p>#}
+                    <a href="#" class="btn btn-primary">Go somewhere</a>
+                </div>
+            </div>
+        {% endfor %}
+    </div>
 {% endblock %}
 {% block title %}
 Кандидаты
