--- a/start/templates/start/candidates.html
+++ b/start/templates/start/candidates.html
@@ -1,7 +1,7 @@
 {% extends 'start/header.html' %}
 {% load static %}
 {% block content %}
-    <a class="btn btn-dark" href="/add_condidate" role="button">Добавить кандидата</a>
+    <a class="btn btn-dark" href="/add_candidate" role="button">Добавить кандидата</a>
 
     <div>
         {% for candidate in candidates %}
