--- a/start/templates/start/header.html
+++ b/start/templates/start/header.html
@@ -9,7 +9,8 @@
 
     <link href="https://unpkg.com/tailwindcss@2.2.4/dist/tailwind.min.css" rel="stylesheet">
 
-    <link rel="stylesheet" href="static/start/css/stylecand.css"><!--
+    <link rel="stylesheet" href="static/start/css/stylecand.css">
+    <link rel="stylesheet" href="static/start/css/stylejob.css"><!--
     <link href="https://fonts.googleapis.com/css2?family=Alegreya:ital,wght@0,400;0,500;0,600;0,700;0,800;0,900;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">-->
     <!--
     font-family: 'Alegreya', serif;
@@ -60,9 +61,9 @@
         <div class="hidden sm:ml-6 sm:block">
           <div class="flex space-x-4">
             <!-- Current: "bg-gray-900 text-white", Default: "text-gray-300 hover:bg-gray-700 hover:text-white" -->
-            <a href="/candidates" class="bg-gray-900 text-white px-3 py-2 rounded-md text-sm font-medium" aria-current="page">Кандидаты</a>
+            <a href="/candidates" class="text-gray-300 hover:bg-gray-700 hover:text-white px-3 py-2 rounded-md text-sm font-medium">Кандидаты</a>
 
-            <a href="#" class="text-gray-300 hover:bg-gray-700 hover:text-white px-3 py-2 rounded-md text-sm font-medium">Вакансии</a>
+            <a href="/jobs" class="text-gray-300 hover:bg-gray-700 hover:text-white px-3 py-2 rounded-md text-sm font-medium">Вакансии</a>
 
             <a href="#" class="text-gray-300 hover:bg-gray-700 hover:text-white px-3 py-2 rounded-md text-sm font-medium">Закрытые вакансии</a>
           </div>
