--- a/start/templates/start/jobs.html
+++ b/start/templates/start/jobs.html
@@ -10,7 +10,7 @@
     <div class="flex flex-wrap items-center justify-between">
       <div class="flex w-0 flex-1 items-center">
         <p class="ml-3 truncate font-medium text-white">
-            <a href="/">
+            <a href="cerjob/{{ job.id }}">
             <button class="bg-white h-14 hover:bg-gray-800 text-gray-600 font-semibold hover:text-white py-2 px-36 hover:border-transparent rounded">{{ job.name }} {{ job.salary }}руб. От {{ job.expirence }}-х лет</button>
         </a>
         </p>
