--- a/start/templates/start/jobs.html
+++ b/start/templates/start/jobs.html
@@ -3,7 +3,7 @@
 {% block content %}
 
 <body bgcolor="#76859B">
-
+<a class="btn btn-dark" href="/add_job" role="button">Добавить вакансию</a>
 <div class=container style="position:relative">
     {% for job in jobs %}
     <div class="mx-auto mt-8 max-w-7xl py-0 px-3 sm:px-6 lg:px-8">
