Added page for seeking job

--- a/start/templates/start/header.html
+++ b/start/templates/start/header.html
@@ -65,6 +65,8 @@
 
             <a href="/jobs" class="text-gray-300 hover:bg-gray-700 hover:text-white px-3 py-2 rounded-md text-sm font-medium">Вакансии</a>
 
+              <a href="/jobseek" class="text-gray-300 hover:bg-gray-700 hover:text-white px-3 py-2 rounded-md text-sm font-medium">Отклики</a>
+
             <a href="#" class="text-gray-300 hover:bg-gray-700 hover:text-white px-3 py-2 rounded-md text-sm font-medium">Закрытые вакансии</a>
           </div>
         </div>
